manifests/traefik-loadbalancer.yaml
# Expose Traefik as LoadBalancer
# Creates an AWS Classic Load Balancer or NLB
#
# Usage:
#   kubectl apply -f traefik-loadbalancer.yaml
#
# Note: This will create an AWS Load Balancer (costs ~$0.0225/hour)

---
# Option 1: Patch existing Traefik service to LoadBalancer
# This changes the Traefik service type from ClusterIP to LoadBalancer
# Run this command instead:
# kubectl patch svc traefik -n kube-system -p '{"spec":{"type":"LoadBalancer"}}'

---
# Option 2: Create separate LoadBalancer service for Traefik
apiVersion: v1
kind: Service
metadata:
  name: traefik-lb
  namespace: kube-system
  annotations:
    # Use Network Load Balancer (recommended for production)
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    
    # Or use Classic Load Balancer
    # service.beta.kubernetes.io/aws-load-balancer-type: classic
    
    # Enable cross-zone load balancing
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: traefik
  ports:
  - name: web
    port: 80
    targetPort: web
    protocol: TCP
  - name: websecure
    port: 443
    targetPort: websecure
    protocol: TCP

---
# After applying, get the LoadBalancer hostname:
# kubectl get svc -n kube-system traefik-lb
#
# Example output:
# NAME         TYPE           CLUSTER-IP      EXTERNAL-IP                                                              PORT(S)                      AGE
# traefik-lb   LoadBalancer   10.43.100.200   a1b2c3d4e5f6g7h8i9j0.elb.us-east-1.amazonaws.com   80:31234/TCP,443:31456/TCP   1m
#
# Access your application:
# http://a1b2c3d4e5f6g7h8i9j0.elb.us-east-1.amazonaws.com/demo/
