manifests/traefik-nodeport.yaml
# Expose Traefik as NodePort
# Exposes Traefik on each node's IP at a specific port
#
# Usage:
#   kubectl apply -f traefik-nodeport.yaml
#
# Access: http://<NODE_IP>:30080/demo/

---
# Option 1: Patch existing Traefik service to NodePort
# Run this command instead:
# kubectl patch svc traefik -n kube-system -p '{"spec":{"type":"NodePort"}}'

---
# Option 2: Create separate NodePort service for Traefik
apiVersion: v1
kind: Service
metadata:
  name: traefik-nodeport
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: traefik
  ports:
  - name: web
    port: 80
    targetPort: web
    nodePort: 30080  # Must be between 30000-32767
    protocol: TCP
  - name: websecure
    port: 443
    targetPort: websecure
    nodePort: 30443
    protocol: TCP

---
# After applying, access via:
# http://<EC2_PUBLIC_IP>:30080/demo/
# https://<EC2_PUBLIC_IP>:30443/demo/
#
# Note: Ensure security group allows ports 30080 and 30443
